traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:8: error: type mismatch;
 found   : Unit
 required: Boolean
    if (k=1){
         ^